Cambio de los dto, para organizarlos en la parte de dtos para el back y para el front, ademas arreglos en 2 entidades Usuario y Personaje y elminiacion total de Habilidad